<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".NoteFill">

    <RelativeLayout
        android:id="@+id/topPart"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/toppartabout"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <!--BackButton-->
            <Button
                android:id="@+id/back_button_note"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:background="@drawable/backbutton" />

            <!--BarText-->
            <ImageView
                android:id="@+id/note_view"
                android:layout_width="200dp"
                android:layout_height="70dp"

                android:layout_marginStart="20dp"
                android:layout_weight="2"
                android:src="@drawable/topbarnote" />

            <ImageButton
                android:id="@+id/save_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:background="@android:color/background_light" />


        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="130dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/noteinfobox"
        android:orientation="vertical"
        android:gravity="center|top"
        app:layout_constraintTop_toBottomOf="@id/topPart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp">

            <com.mikhaellopez.circularimageview.CircularImageView
                app:civ_border_width="2dp"
                app:civ_border_color="#B8B5B5"
                android:id="@+id/symbol_circle"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginBottom="6dp"
                android:src="@drawable/symbolarea"/>

            <TextView
                android:id="@+id/dateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:inputType="date"
                android:hint="yyyy-mm-dd"
                android:textAlignment="center"
                android:layout_gravity="bottom" />

        </LinearLayout>

        <TextView
            android:id="@+id/noteNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="Name the note :)"
            android:textAlignment="center"
            android:inputType="text"/>

        <TextView
            android:id="@+id/noteDescriptionText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:background="@drawable/notetextarea"
            android:padding="5dp"/>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>